@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-17-13
+DATE: 09/22/2021
+STAFF: lec
+wts2-702/littriageload: littriage_NLML_refresh fix
+
 TAG: littriageload-6-0-17-12
 DATE: 09/14/2021
 STAFF: lec
